@@ -64,6 +64,14 @@ Other Changes:
     between hard minimum window size and table minimum size).
   - Fixed an issue where submitting non-integer row heights would eventually
     advance table parent layout by +0/+1 depending on its visibility.
+- ColorEdit:
+  - Added R/G/B/A color markers next to each component (enabled by default).
+  - Added ImGuiColorEditFlags_NoColorMarkers to disable them.
+  - Added style.ColorMarkerSize to configure width of color component markers.
+- Sliders, Drags:
+  - Added ImGuiSliderFlags_ColorMarkers to opt-in adding R/G/B/A color markers
+    next to each components, in multi-components functions.
+  - Added a way to select a specific marker color.
 - Text:
   - Fixed low-level word-wrapping function reading from *text_end when passed
     a string range. (#9107) [@achabense]
